@@ -808,7 +808,7 @@ public class CallableStatementTest {
       cstmt.close();
       cstmt = con.prepareCall("{ call lvarchar_in_name(?) }");
       String maxFloat = "3.4E38";
-      cstmt.setObject(1, new Float(maxFloat), Types.LONGVARCHAR);
+      cstmt.setObject(1, Float.valueOf(maxFloat), Types.LONGVARCHAR);
       cstmt.executeUpdate();
       cstmt.close();
       Statement stmt = con.createStatement();
@@ -967,11 +967,11 @@ public class CallableStatementTest {
       Statement stmt = con.createStatement();
       ResultSet rs = stmt.executeQuery("select * from real_tab");
       assertTrue(rs.next());
-      Float oVal = new Float(intValues[0]);
-      Float rVal = new Float(rs.getObject(1).toString());
+      Float oVal = (float) intValues[0];
+      Float rVal = Float.valueOf(rs.getObject(1).toString());
       assertTrue(oVal.equals(rVal));
-      oVal = new Float(intValues[1]);
-      rVal = new Float(rs.getObject(2).toString());
+      oVal = (float) intValues[1];
+      rVal = Float.valueOf(rs.getObject(2).toString());
       assertTrue(oVal.equals(rVal));
       rs.close();
       stmt.close();
